// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerOptions renders correctly 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there are highlighted options 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    >
      <DrawerOption
        highlighted={true}
        onPress={[Function]}
        subtext="testSubtext"
        title="testLabel"
      />
      <View
        style={
          [
            {
              "alignSelf": "stretch",
              "backgroundColor": "#EAE3DF",
              "height": 1,
            },
            {
              "backgroundColor": "#FCCCB6",
            },
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there are options 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    >
      <DrawerOption
        onPress={[Function]}
        title="testLabel"
      />
      <View
        style={
          [
            {
              "alignSelf": "stretch",
              "backgroundColor": "#EAE3DF",
              "height": 1,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there is content 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        testContent
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
